--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-node_modules
+.*
+!/.gitignore
+
+node_modules/
 dist
 .tmp
 .sass-cache
-bower_components
-test/bower_components
-bin
-pkg
+bower_components/
+bin/
+pkg/
+code.google.com/
+github.com/
