--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,4 +3,4 @@ FROM ubuntu:trusty
 MAINTAINER mateuszdyminski
 
 ADD bin/main /usr/bin/main
-CMD main --logtostderr=1 --toChannel=true --k=kafka --t=topic --p=$PORT
+CMD main --logtostderr=1 --toChannel=true --k=kafka --topic=$TOPIC --p=$PORT
