--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,4 +3,5 @@ FROM ubuntu:trusty
 MAINTAINER mateuszdyminski
 
 ADD bin/main /usr/bin/main
-CMD main --logtostderr=1 --toChannel=true --k=kafka --topic=$TOPIC --p=$PORT
+
+CMD main --logtostderr=1 --toChannel=true --nsqHost=nsqWorker --p=$PORT
