--- a/coreos/fleet/nsq-worker.service
+++ b/coreos/fleet/nsq-worker.service
@@ -4,9 +4,10 @@ After=docker.service
 After=nsq-master.service
 
 [Service]
-Restart=always
-RestartSec=10s
-ExecStartPre=-/usr/bin/docker ps -a -q | xargs docker rm
+# Get CoreOS environmental variables
+EnvironmentFile=/etc/environment
+
+ExecStartPre=-/usr/bin/docker rm nsqWorker
 ExecStartPre=/usr/bin/docker pull nsqio/nsq
 ExecStart=/usr/bin/docker run --name nsqWorker --link nsqMaster:nsqMaster -p 4150:4150 -p 4151:4151 nsqio/nsq /nsqd --broadcast-address=172.17.42.1 --lookupd-tcp-address=nsqMaster:4160
 ExecStop=/usr/bin/docker stop nsqWorker
