--- a/coreos/fleet/frontend.service
+++ b/coreos/fleet/frontend.service
@@ -3,9 +3,7 @@ Description=Log-aggregator frontend service
 After=docker.service
 
 [Service]
-Restart=always
-RestartSec=10s
-ExecStartPre=-/usr/bin/docker ps -a -q | xargs docker rm
+ExecStartPre=-/usr/bin/docker rm frontend
 ExecStartPre=/usr/bin/docker pull quay.io/mateuszdyminski/frontend
 ExecStart=/usr/bin/docker run --rm -p 9001:9001 --name frontend quay.io/mateuszdyminski/frontend
 ExecStop=/usr/bin/docker stop frontend
