--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ MAINTAINER mateuszdyminski
 
 ADD bin/backend /usr/bin/backend
 
-CMD /usr/bin/backend --p=8080 --nsqHost=nsqMaster --nsqTopic=all
+CMD /usr/bin/backend --p=$PORT --nsqLookupd=$NSQ_LOOKUPD
