--- a/coreos/fleet/web-discovery@.service
+++ b/coreos/fleet/web-discovery@.service
@@ -1,16 +1,17 @@
 [Unit]
-Description=Log-aggregator web %i etcd registration
+Description=Web server on port %i etcd registration
 
 # Requirements
 Requires=etcd.service
-Requires=web.%i.service
+Requires=web@%i.service
 
 # Dependency ordering and binding
 After=etcd.service
-After=web.%i.service
-BindsTo=web.%i.service
+After=web@%i.service
+BindsTo=web@%i.service
 
 [Service]
+
 # Get CoreOS environmental variables
 EnvironmentFile=/etc/environment
 
@@ -20,7 +21,7 @@ ExecStart=/bin/bash -c '\
   while true; do \
     curl -f ${COREOS_PUBLIC_IPV4}:80; \
     if [ $? -eq 0 ]; then \
-      etcdctl set /services/web/${COREOS_PUBLIC_IPV4} \'{"host": "%H", "ipv4_addr": ${COREOS_PUBLIC_IPV4}, "port": 80}\' --ttl 30; \
+      etcdctl set /services/web/${COREOS_PUBLIC_IPV4} \'{"host": "%H", "ipv4_addr": ${COREOS_PUBLIC_IPV4}, "port": }\' --ttl 30; \
     else \
       etcdctl rm /services/web/${COREOS_PUBLIC_IPV4}; \
     fi; \
@@ -32,4 +33,4 @@ ExecStop=/usr/bin/etcdctl rm /services/web/${COREOS_PUBLIC_IPV4}
 
 [X-Fleet]
 # Schedule on the same machine as the associated Web service
-X-ConditionMachineOf=web.%i.service
+X-ConditionMachineOf=web@%i.service
