--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,4 +4,4 @@ MAINTAINER mateuszdyminski
 
 ADD bin/main /usr/bin/main
 
-CMD main --logtostderr=1 --toChannel=true --nsqHost=nsqWorker --p=$PORT
+CMD main --logtostderr=1 --toChannel=true --nsqdAddr=$NSQD_ADDR --p=$PORT --host=$HOST
