--- a/coreos/fleet/backend.service
+++ b/coreos/fleet/backend.service
@@ -11,7 +11,7 @@ Requires=backend-discovery.service
 # Dependency ordering
 After=etcd.service
 After=docker.service
-After=nsq-worker.service
+After=nsqd.service
 Before=backend-discovery.service
 
 [Service]
@@ -29,13 +29,11 @@ EnvironmentFile=/etc/environment
 ## Directives with "=-" are allowed to fail without consequence
 ExecStartPre=-/usr/bin/docker rm backend
 ExecStartPre=/usr/bin/docker pull quay.io/mateuszdyminski/backend
-ExecStart=/usr/bin/docker run -p ${COREOS_PUBLIC_IPV4}:9001:9001 --name frontend quay.io/mateuszdyminski/frontend
-run -p ${COREOS_PUBLIC_IPV4}:8080:8080 --link nsqMaster:nsqMaster --name backend quay.io/mateuszdyminski/backend
+ExecStart=/usr/bin/docker run -e "PORT=8090" -e "NSQ_LOOKUPD=${COREOS_PRIVATE_IPV4}:4161" -p ${COREOS_PUBLIC_IPV4}:8090:8090 --name backend quay.io/mateuszdyminski/backend
 
 # Stop
 ExecStop=/usr/bin/docker stop backend
 
 [X-Fleet]
 # Don't schedule on the same machine as other Web instances
-X-Conflicts=backend.service
-MachineOf=frontend.service
+Conflicts=backend.service
