--- a/coreos/fleet/frontend-discovery.service
+++ b/coreos/fleet/frontend-discovery.service
@@ -32,4 +32,4 @@ ExecStop=/usr/bin/etcdctl rm /services/frontend/${COREOS_PUBLIC_IPV4}
 
 [X-Fleet]
 # Schedule on the same machine as the associated Frontend service
-X-ConditionMachineOf=frontend.service
+MachineOf=frontend.service
