--- a/coreos/fleet/nsqlookupd-discovery@.service
+++ b/coreos/fleet/nsqlookupd-discovery@.service
@@ -1,29 +1,35 @@
-
 [Unit]
 Description=NSQLookupd registration service
 
+# Requirements
 Requires=etcd.service
 Requires=nsqlookupd@%i.service
 
+# Dependency ordering and binding
 After=etcd.service
 After=nsqlookupd@%i.service
-
 BindsTo=nsqlookupd@%i.service
 
 [Service]
+# Get CoreOS environmental variables
 EnvironmentFile=/etc/environment
 
+# Start
+## Test whether service is accessible and then register useful information
 ExecStart=/bin/bash -c '\
- while true; do \
-        curl -f ${COREOS_PRIVATE_IPV4}:4161/ping; \
-        if [ $? -eq 0 ]; then \
-          printf \'{"host": "%s", "tcp": "%s", "http": "%s"}\' "${COREOS_PRIVATE_IPV4}" "4160" "4161" | \
-          etcdctl set /services/nsqlookupd/${COREOS_PRIVATE_IPV4} --ttl 30; \
-        fi; \
-        sleep 20; \
-    done'
+  while true; do \
+    curl -f ${COREOS_PRIVATE_IPV4}:4161/ping; \
+    if [ $? -eq 0 ]; then \
+     etcdctl set /services/nsqlookupd/${COREOS_PRIVATE_IPV4} \'{"host": "%H", "ipv4_addr": "${COREOS_PRIVATE_IPV4}", "port": 4161 }\' --ttl 30; \
+    else \
+      etcdctl rm /services/nsqlookupd/${COREOS_PRIVATE_IPV4}; \
+    fi; \
+    sleep 20; \
+  done'
 
+# Stop
 ExecStop=/usr/bin/etcdctl rm /services/nsqlookupd/${COREOS_PRIVATE_IPV4}
 
 [X-Fleet]
+# Schedule on the same machine as the associated nsqlookupd service
 MachineOf=nsqlookupd@%i.service
