--- a/nsq-confd/Dockerfile
+++ b/nsq-confd/Dockerfile
@@ -1,14 +1,30 @@
-FROM dockerfile/nsq
+# Pull base image.
+FROM ubuntu:trusty
 
-RUN wget https://github.com/kelseyhightower/confd/releases/download/v0.6.3/confd-0.6.3-linux-amd64 && \
-    mv confd-0.6.3-linux-amd64 /usr/local/bin/confd && \
-    chmod +x /usr/local/bin/confd
+# Install NSQ.
+RUN \
+  mkdir -p /tmp/nsq && apt-get update && apt-get install wget -y && \
+  wget https://s3.amazonaws.com/bitly-downloads/nsq/nsq-0.3.2.linux-amd64.go1.4.1.tar.gz -O - | tar -xvz --strip=1 -C /tmp/nsq && \
+  mv /tmp/nsq/bin/* /usr/local/bin/ && \
+  rm -rf /tmp/nsq
 
-RUN mkdir /etc/nsq
-
+# configure confd
+ADD confd/bin/confd-0.7.1-linux-amd64 /usr/local/bin/confd
 ADD confd /etc/confd
 ADD bin/confd-watch-nsqd /usr/local/bin/confd-watch-nsqd
 
+RUN mkdir /etc/nsq
+RUN chmod +x /usr/local/bin/confd
+
+# Define working directory.
 WORKDIR /data
 
+# Define default command.
 CMD ["bash"]
+
+# Expose ports.
+EXPOSE 4150
+EXPOSE 4151
+EXPOSE 4160
+EXPOSE 4161
+EXPOSE 4171
