--- a/infra/ansible/tasks/roles/services/files/instances/backend-discovery.service
+++ b/infra/ansible/tasks/roles/services/files/instances/backend-discovery.service
@@ -18,18 +18,18 @@ EnvironmentFile=/etc/environment
 ## Test whether service is accessible and then register useful information
 ExecStart=/bin/bash -c '\
   while true; do \
-    curl -f ${COREOS_PUBLIC_IPV4}:8090; \
+    curl -f ${COREOS_PRIVATE_IPV4}:8090/health; \
     if [ $? -eq 0 ]; then \
-      etcdctl set /services/backend/${COREOS_PUBLIC_IPV4} \'{"host": "%H", "ipv4_addr": ${COREOS_PUBLIC_IPV4}, "port": 8090 }\' --ttl 30; \
+      etcdctl set /services/backend/${COREOS_PRIVATE_IPV4} \'{"host": "%H", "ipv4_addr": "${COREOS_PRIVATE_IPV4}", "port": 8090 }\' --ttl 30; \
     else \
-      etcdctl rm /services/backend/${COREOS_PUBLIC_IPV4}; \
+      etcdctl rm /services/backend/${COREOS_PRIVATE_IPV4}; \
     fi; \
     sleep 20; \
   done'
 
 # Stop
-ExecStop=/usr/bin/etcdctl rm /services/backend/${COREOS_PUBLIC_IPV4}
+ExecStop=/usr/bin/etcdctl rm /services/backend/${COREOS_PRIVATE_IPV4}
 
 [X-Fleet]
 # Schedule on the same machine as the associated backend service
-X-ConditionMachineOf=backend.service
+MachineOf=backend.service
