--- a/infra/ansible/tasks/roles/services/files/instances/frontend-discovery.service
+++ b/infra/ansible/tasks/roles/services/files/instances/frontend-discovery.service
@@ -18,17 +18,17 @@ EnvironmentFile=/etc/environment
 ## Test whether service is accessible and then register useful information
 ExecStart=/bin/bash -c '\
   while true; do \
-    curl -f ${COREOS_PUBLIC_IPV4}:9001; \
+    curl -f ${COREOS_PRIVATE_IPV4}:9001; \
     if [ $? -eq 0 ]; then \
-      etcdctl set /services/frontend/${COREOS_PUBLIC_IPV4} \'{"host": "%H", "ipv4_addr": ${COREOS_PUBLIC_IPV4}, "port": 9001 }\' --ttl 30; \
+      etcdctl set /services/frontend/${COREOS_PRIVATE_IPV4} \'{"host": "%H", "ipv4_addr": "${COREOS_PRIVATE_IPV4}", "port": 9001 }\' --ttl 30; \
     else \
-      etcdctl rm /services/frontend/${COREOS_PUBLIC_IPV4}; \
+      etcdctl rm /services/frontend/${COREOS_PRIVATE_IPV4}; \
     fi; \
     sleep 20; \
   done'
 
 # Stop
-ExecStop=/usr/bin/etcdctl rm /services/frontend/${COREOS_PUBLIC_IPV4}
+ExecStop=/usr/bin/etcdctl rm /services/frontend/${COREOS_PRIVATE_IPV4}
 
 [X-Fleet]
 # Schedule on the same machine as the associated Frontend service
