--- a/infra/ansible/ssh.config
+++ b/infra/ansible/ssh.config
@@ -3,7 +3,7 @@ Host *
     UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
     PasswordAuthentication no
-    IdentityFile /home/md/.vagrant.d/insecure_private_key
+    IdentityFile ~/.vagrant.d/insecure_private_key
     IdentitiesOnly yes
     ForwardAgent yes
     LogLevel FATAL
